--- a/client/src/css/ComponentStyles.css
+++ b/client/src/css/ComponentStyles.css
@@ -1,19 +1,12 @@
 #toggle {
   cursor: pointer;
   color: #3fcf80;
-  font-size: 30px;
+  font-size: 25px;
   margin-left: 20px;
   background: transparent;
   border: none;
   padding: 10px;
   outline: none;
-}
-
-.navbar {
-  background-color: #1D1E22;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  z-index: 11;
-  height: 3.3rem;
 }
 
 a,
